<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/myQueue_dialog_title"
            android:textColor="@color/q_lbl"
            android:textSize="@dimen/_20sdp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/tutorial_img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myQueue_dialog_description"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/selesaiBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/round_button_bg"
        android:gravity="center"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_25sdp"
        android:paddingRight="@dimen/_25sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/selesai"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold" />
</LinearLayout>