<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/contactArrowImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/arrow_contact" />

        <TextView
            android:id="@+id/contactTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactArrowImg"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/contact"
            android:textColor="@color/con_lbl"
            android:textSize="@dimen/_20sdp" />

        <ProgressBar
            android:id="@+id/loadingMapProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />


        <LinearLayout
            android:id="@+id/informationLayout"
            android:visibility="gone"
            android:layout_below="@id/contactTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <fragment
                android:id="@+id/mapFragment"
                android:name="com.example.android.thijari.fragment.MarkerGoogleMapFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                tools:layout="@layout/fragment_maker_google_map" />

            <TextView
                android:id="@+id/branchName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textAllCaps="true"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                tools:text="TABUNG HAJI CONTACT CENTER (THCC)" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="30"
                    android:drawableLeft="@drawable/contact_tel"
                    android:drawablePadding="10dp"
                    android:text="Tel"
                    android:textAllCaps="true"
                    android:textColor="@color/contact_color"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/branchTel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="70"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    tools:text="03 - 6207 1919" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="30"
                    android:drawableLeft="@drawable/contact_fax"
                    android:drawablePadding="10dp"
                    android:text="Faks"
                    android:textAllCaps="true"
                    android:textColor="@color/contact_color"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/branchFax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="70"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    tools:text="03 - 7728 4959" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="30"
                    android:drawableLeft="@drawable/contact_fax"
                    android:drawablePadding="10dp"
                    android:text="E-mel"
                    android:textAllCaps="true"
                    android:textColor="@color/contact_color"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/branchEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="70"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    tools:text="th-info@lth.gov.my" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="SMS"
                android:textColor="@color/contact_color"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:text="@string/contact_sms"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="5dp"
                android:text="@string/contact_sms2"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/contact_waktu"
                android:textColor="@color/contact_color"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/branchOperationHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                tools:text="8.00 pagi - 5.30 petang" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="5dp"
                android:text="@string/contact_waktu_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>